final edits to talk

--- a/presentations/graphics group/An_Application_of_LIME_to_a_Random_Forest.html
+++ b/presentations/graphics group/An_Application_of_LIME_to_a_Random_Forest.html
@@ -14,7 +14,7 @@ class: center, middle, inverse, title-slide
 
 # <a href="https://en.wikipedia.org/wiki/Tilia"><img src="images/lindens.jpg" /></a> An Application of LIME to a Random Forest
 ### <font size="5"> Katherine Goode </font>
-### <font size="5"> ISU Graphics Group, March 1, 2019 </font>
+### <font size="5"> ISU Graphics Group - March 1, 2019 </font>
 
 ---
 
@@ -373,7 +373,7 @@ glimpse(hamby224_test)
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#nsbhjvoeod .gt_table {
+#nlkcyutafs .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -392,13 +392,13 @@ glimpse(hamby224_test)
   /* table.border.top.color */
 }
 
-#nsbhjvoeod .gt_heading {
+#nlkcyutafs .gt_heading {
   background-color: #FFFFFF;
   /* heading.background.color */
   border-bottom-color: #FFFFFF;
 }
 
-#nsbhjvoeod .gt_title {
+#nlkcyutafs .gt_title {
   color: #000000;
   font-size: 125%;
   /* heading.title.font.size */
@@ -409,7 +409,7 @@ glimpse(hamby224_test)
   border-bottom-width: 0;
 }
 
-#nsbhjvoeod .gt_subtitle {
+#nlkcyutafs .gt_subtitle {
   color: #000000;
   font-size: 85%;
   /* heading.subtitle.font.size */
@@ -420,7 +420,7 @@ glimpse(hamby224_test)
   border-top-width: 0;
 }
 
-#nsbhjvoeod .gt_bottom_border {
+#nlkcyutafs .gt_bottom_border {
   border-bottom-style: solid;
   /* heading.border.bottom.style */
   border-bottom-width: 2px;
@@ -429,7 +429,7 @@ glimpse(hamby224_test)
   /* heading.border.bottom.color */
 }
 
-#nsbhjvoeod .gt_column_spanner {
+#nlkcyutafs .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #A8A8A8;
@@ -437,7 +437,7 @@ glimpse(hamby224_test)
   padding-bottom: 4px;
 }
 
-#nsbhjvoeod .gt_col_heading {
+#nlkcyutafs .gt_col_heading {
   color: #000000;
   background-color: #FFFFFF;
   /* column_labels.background.color */
@@ -450,11 +450,11 @@ glimpse(hamby224_test)
   margin: 10px;
 }
 
-#nsbhjvoeod .gt_sep_right {
+#nlkcyutafs .gt_sep_right {
   border-right: 5px solid #FFFFFF;
 }
 
-#nsbhjvoeod .gt_group_heading {
+#nlkcyutafs .gt_group_heading {
   padding: 8px;
   color: #000000;
   background-color: #FFFFFF;
@@ -478,7 +478,7 @@ glimpse(hamby224_test)
   vertical-align: middle;
 }
 
-#nsbhjvoeod .gt_empty_group_heading {
+#nlkcyutafs .gt_empty_group_heading {
   padding: 0.5px;
   color: #000000;
   background-color: #FFFFFF;
@@ -502,29 +502,29 @@ glimpse(hamby224_test)
   vertical-align: middle;
 }
 
-#nsbhjvoeod .gt_striped {
+#nlkcyutafs .gt_striped {
   background-color: #f2f2f2;
 }
 
-#nsbhjvoeod .gt_row {
+#nlkcyutafs .gt_row {
   padding: 10px;
   /* row.padding */
   margin: 10px;
   vertical-align: middle;
 }
 
-#nsbhjvoeod .gt_stub {
+#nlkcyutafs .gt_stub {
   border-right-style: solid;
   border-right-width: 2px;
   border-right-color: #A8A8A8;
   padding-left: 12px;
 }
 
-#nsbhjvoeod .gt_stub.gt_row {
+#nlkcyutafs .gt_stub.gt_row {
   background-color: #FFFFFF;
 }
 
-#nsbhjvoeod .gt_summary_row {
+#nlkcyutafs .gt_summary_row {
   background-color: #FFFFFF;
   /* summary_row.background.color */
   padding: 6px;
@@ -533,13 +533,13 @@ glimpse(hamby224_test)
   /* summary_row.text_transform */
 }
 
-#nsbhjvoeod .gt_first_summary_row {
+#nlkcyutafs .gt_first_summary_row {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #A8A8A8;
 }
 
-#nsbhjvoeod .gt_table_body {
+#nlkcyutafs .gt_table_body {
   border-top-style: solid;
   /* field.border.top.style */
   border-top-width: 2px;
@@ -554,55 +554,55 @@ glimpse(hamby224_test)
   /* field.border.bottom.color */
 }
 
-#nsbhjvoeod .gt_footnote {
+#nlkcyutafs .gt_footnote {
   font-size: 90%;
   /* footnote.font.size */
   padding: 4px;
   /* footnote.padding */
 }
 
-#nsbhjvoeod .gt_sourcenote {
+#nlkcyutafs .gt_sourcenote {
   font-size: 90%;
   /* sourcenote.font.size */
   padding: 4px;
   /* sourcenote.padding */
 }
 
-#nsbhjvoeod .gt_center {
+#nlkcyutafs .gt_center {
   text-align: center;
 }
 
-#nsbhjvoeod .gt_left {
+#nlkcyutafs .gt_left {
   text-align: left;
 }
 
-#nsbhjvoeod .gt_right {
+#nlkcyutafs .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#nsbhjvoeod .gt_font_normal {
+#nlkcyutafs .gt_font_normal {
   font-weight: normal;
 }
 
-#nsbhjvoeod .gt_font_bold {
+#nlkcyutafs .gt_font_bold {
   font-weight: bold;
 }
 
-#nsbhjvoeod .gt_font_italic {
+#nlkcyutafs .gt_font_italic {
   font-style: italic;
 }
 
-#nsbhjvoeod .gt_super {
+#nlkcyutafs .gt_super {
   font-size: 65%;
 }
 
-#nsbhjvoeod .gt_footnote_glyph {
+#nlkcyutafs .gt_footnote_glyph {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="nsbhjvoeod" style="overflow-x:auto;"><!--gt table start-->
+<div id="nlkcyutafs" style="overflow-x:auto;"><!--gt table start-->
 <table class='gt_table'>
 <tr>
 <th class='gt_col_heading gt_center' rowspan='1' colspan='1'>Truth</th>
@@ -664,7 +664,7 @@ class: inverse, center, middle
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#tntcekpcgz .gt_table {
+#wzxmrgwfkj .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -683,13 +683,13 @@ class: inverse, center, middle
   /* table.border.top.color */
 }
 
-#tntcekpcgz .gt_heading {
+#wzxmrgwfkj .gt_heading {
   background-color: #FFFFFF;
   /* heading.background.color */
   border-bottom-color: #FFFFFF;
 }
 
-#tntcekpcgz .gt_title {
+#wzxmrgwfkj .gt_title {
   color: #000000;
   font-size: 125%;
   /* heading.title.font.size */
@@ -700,7 +700,7 @@ class: inverse, center, middle
   border-bottom-width: 0;
 }
 
-#tntcekpcgz .gt_subtitle {
+#wzxmrgwfkj .gt_subtitle {
   color: #000000;
   font-size: 85%;
   /* heading.subtitle.font.size */
@@ -711,7 +711,7 @@ class: inverse, center, middle
   border-top-width: 0;
 }
 
-#tntcekpcgz .gt_bottom_border {
+#wzxmrgwfkj .gt_bottom_border {
   border-bottom-style: solid;
   /* heading.border.bottom.style */
   border-bottom-width: 2px;
@@ -720,7 +720,7 @@ class: inverse, center, middle
   /* heading.border.bottom.color */
 }
 
-#tntcekpcgz .gt_column_spanner {
+#wzxmrgwfkj .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #A8A8A8;
@@ -728,7 +728,7 @@ class: inverse, center, middle
   padding-bottom: 4px;
 }
 
-#tntcekpcgz .gt_col_heading {
+#wzxmrgwfkj .gt_col_heading {
   color: #000000;
   background-color: #FFFFFF;
   /* column_labels.background.color */
@@ -741,11 +741,11 @@ class: inverse, center, middle
   margin: 10px;
 }
 
-#tntcekpcgz .gt_sep_right {
+#wzxmrgwfkj .gt_sep_right {
   border-right: 5px solid #FFFFFF;
 }
 
-#tntcekpcgz .gt_group_heading {
+#wzxmrgwfkj .gt_group_heading {
   padding: 8px;
   color: #000000;
   background-color: #FFFFFF;
@@ -769,7 +769,7 @@ class: inverse, center, middle
   vertical-align: middle;
 }
 
-#tntcekpcgz .gt_empty_group_heading {
+#wzxmrgwfkj .gt_empty_group_heading {
   padding: 0.5px;
   color: #000000;
   background-color: #FFFFFF;
@@ -793,29 +793,29 @@ class: inverse, center, middle
   vertical-align: middle;
 }
 
-#tntcekpcgz .gt_striped {
+#wzxmrgwfkj .gt_striped {
   background-color: #f2f2f2;
 }
 
-#tntcekpcgz .gt_row {
+#wzxmrgwfkj .gt_row {
   padding: 10px;
   /* row.padding */
   margin: 10px;
   vertical-align: middle;
 }
 
-#tntcekpcgz .gt_stub {
+#wzxmrgwfkj .gt_stub {
   border-right-style: solid;
   border-right-width: 2px;
   border-right-color: #A8A8A8;
   padding-left: 12px;
 }
 
-#tntcekpcgz .gt_stub.gt_row {
+#wzxmrgwfkj .gt_stub.gt_row {
   background-color: #FFFFFF;
 }
 
-#tntcekpcgz .gt_summary_row {
+#wzxmrgwfkj .gt_summary_row {
   background-color: #FFFFFF;
   /* summary_row.background.color */
   padding: 6px;
@@ -824,13 +824,13 @@ class: inverse, center, middle
   /* summary_row.text_transform */
 }
 
-#tntcekpcgz .gt_first_summary_row {
+#wzxmrgwfkj .gt_first_summary_row {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #A8A8A8;
 }
 
-#tntcekpcgz .gt_table_body {
+#wzxmrgwfkj .gt_table_body {
   border-top-style: solid;
   /* field.border.top.style */
   border-top-width: 2px;
@@ -845,55 +845,55 @@ class: inverse, center, middle
   /* field.border.bottom.color */
 }
 
-#tntcekpcgz .gt_footnote {
+#wzxmrgwfkj .gt_footnote {
   font-size: 90%;
   /* footnote.font.size */
   padding: 4px;
   /* footnote.padding */
 }
 
-#tntcekpcgz .gt_sourcenote {
+#wzxmrgwfkj .gt_sourcenote {
   font-size: 90%;
   /* sourcenote.font.size */
   padding: 4px;
   /* sourcenote.padding */
 }
 
-#tntcekpcgz .gt_center {
+#wzxmrgwfkj .gt_center {
   text-align: center;
 }
 
-#tntcekpcgz .gt_left {
+#wzxmrgwfkj .gt_left {
   text-align: left;
 }
 
-#tntcekpcgz .gt_right {
+#wzxmrgwfkj .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#tntcekpcgz .gt_font_normal {
+#wzxmrgwfkj .gt_font_normal {
   font-weight: normal;
 }
 
-#tntcekpcgz .gt_font_bold {
+#wzxmrgwfkj .gt_font_bold {
   font-weight: bold;
 }
 
-#tntcekpcgz .gt_font_italic {
+#wzxmrgwfkj .gt_font_italic {
   font-style: italic;
 }
 
-#tntcekpcgz .gt_super {
+#wzxmrgwfkj .gt_super {
   font-size: 65%;
 }
 
-#tntcekpcgz .gt_footnote_glyph {
+#wzxmrgwfkj .gt_footnote_glyph {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="tntcekpcgz" style="overflow-x:auto;"><!--gt table start-->
+<div id="wzxmrgwfkj" style="overflow-x:auto;"><!--gt table start-->
 <table class='gt_table'>
 <tr>
 <th class='gt_col_heading gt_right' rowspan='1' colspan='1'>case</th>
@@ -925,7 +925,7 @@ class: inverse, center, middle
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#jppfydzbgm .gt_table {
+#vrlfzjnbog .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -944,13 +944,13 @@ class: inverse, center, middle
   /* table.border.top.color */
 }
 
-#jppfydzbgm .gt_heading {
+#vrlfzjnbog .gt_heading {
   background-color: #FFFFFF;
   /* heading.background.color */
   border-bottom-color: #FFFFFF;
 }
 
-#jppfydzbgm .gt_title {
+#vrlfzjnbog .gt_title {
   color: #000000;
   font-size: 125%;
   /* heading.title.font.size */
@@ -961,7 +961,7 @@ class: inverse, center, middle
   border-bottom-width: 0;
 }
 
-#jppfydzbgm .gt_subtitle {
+#vrlfzjnbog .gt_subtitle {
   color: #000000;
   font-size: 85%;
   /* heading.subtitle.font.size */
@@ -972,7 +972,7 @@ class: inverse, center, middle
   border-top-width: 0;
 }
 
-#jppfydzbgm .gt_bottom_border {
+#vrlfzjnbog .gt_bottom_border {
   border-bottom-style: solid;
   /* heading.border.bottom.style */
   border-bottom-width: 2px;
@@ -981,7 +981,7 @@ class: inverse, center, middle
   /* heading.border.bottom.color */
 }
 
-#jppfydzbgm .gt_column_spanner {
+#vrlfzjnbog .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #A8A8A8;
@@ -989,7 +989,7 @@ class: inverse, center, middle
   padding-bottom: 4px;
 }
 
-#jppfydzbgm .gt_col_heading {
+#vrlfzjnbog .gt_col_heading {
   color: #000000;
   background-color: #FFFFFF;
   /* column_labels.background.color */
@@ -1002,11 +1002,11 @@ class: inverse, center, middle
   margin: 10px;
 }
 
-#jppfydzbgm .gt_sep_right {
+#vrlfzjnbog .gt_sep_right {
   border-right: 5px solid #FFFFFF;
 }
 
-#jppfydzbgm .gt_group_heading {
+#vrlfzjnbog .gt_group_heading {
   padding: 8px;
   color: #000000;
   background-color: #FFFFFF;
@@ -1030,7 +1030,7 @@ class: inverse, center, middle
   vertical-align: middle;
 }
 
-#jppfydzbgm .gt_empty_group_heading {
+#vrlfzjnbog .gt_empty_group_heading {
   padding: 0.5px;
   color: #000000;
   background-color: #FFFFFF;
@@ -1054,29 +1054,29 @@ class: inverse, center, middle
   vertical-align: middle;
 }
 
-#jppfydzbgm .gt_striped {
+#vrlfzjnbog .gt_striped {
   background-color: #f2f2f2;
 }
 
-#jppfydzbgm .gt_row {
+#vrlfzjnbog .gt_row {
   padding: 10px;
   /* row.padding */
   margin: 10px;
   vertical-align: middle;
 }
 
-#jppfydzbgm .gt_stub {
+#vrlfzjnbog .gt_stub {
   border-right-style: solid;
   border-right-width: 2px;
   border-right-color: #A8A8A8;
   padding-left: 12px;
 }
 
-#jppfydzbgm .gt_stub.gt_row {
+#vrlfzjnbog .gt_stub.gt_row {
   background-color: #FFFFFF;
 }
 
-#jppfydzbgm .gt_summary_row {
+#vrlfzjnbog .gt_summary_row {
   background-color: #FFFFFF;
   /* summary_row.background.color */
   padding: 6px;
@@ -1085,13 +1085,13 @@ class: inverse, center, middle
   /* summary_row.text_transform */
 }
 
-#jppfydzbgm .gt_first_summary_row {
+#vrlfzjnbog .gt_first_summary_row {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #A8A8A8;
 }
 
-#jppfydzbgm .gt_table_body {
+#vrlfzjnbog .gt_table_body {
   border-top-style: solid;
   /* field.border.top.style */
   border-top-width: 2px;
@@ -1106,55 +1106,55 @@ class: inverse, center, middle
   /* field.border.bottom.color */
 }
 
-#jppfydzbgm .gt_footnote {
+#vrlfzjnbog .gt_footnote {
   font-size: 90%;
   /* footnote.font.size */
   padding: 4px;
   /* footnote.padding */
 }
 
-#jppfydzbgm .gt_sourcenote {
+#vrlfzjnbog .gt_sourcenote {
   font-size: 90%;
   /* sourcenote.font.size */
   padding: 4px;
   /* sourcenote.padding */
 }
 
-#jppfydzbgm .gt_center {
+#vrlfzjnbog .gt_center {
   text-align: center;
 }
 
-#jppfydzbgm .gt_left {
+#vrlfzjnbog .gt_left {
   text-align: left;
 }
 
-#jppfydzbgm .gt_right {
+#vrlfzjnbog .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#jppfydzbgm .gt_font_normal {
+#vrlfzjnbog .gt_font_normal {
   font-weight: normal;
 }
 
-#jppfydzbgm .gt_font_bold {
+#vrlfzjnbog .gt_font_bold {
   font-weight: bold;
 }
 
-#jppfydzbgm .gt_font_italic {
+#vrlfzjnbog .gt_font_italic {
   font-style: italic;
 }
 
-#jppfydzbgm .gt_super {
+#vrlfzjnbog .gt_super {
   font-size: 65%;
 }
 
-#jppfydzbgm .gt_footnote_glyph {
+#vrlfzjnbog .gt_footnote_glyph {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="jppfydzbgm" style="overflow-x:auto;"><!--gt table start-->
+<div id="vrlfzjnbog" style="overflow-x:auto;"><!--gt table start-->
 <table class='gt_table'>
 <tr>
 <th class='gt_col_heading gt_right' rowspan='1' colspan='1'>ccf</th>
@@ -1268,7 +1268,7 @@ class: inverse, center, middle
 - Can specify the number of features to select
     - We have been choosing 3 features
 - Options in lime
-     - auto: forward selection if `\(m\le6\)`, highest weight otherwise (default)
+     - auto: forward selection if `\(k\le6\)`, highest weight otherwise (default)
      - forward selection with ridge regression
      - highest weight with ridge regression
      - LASSO
@@ -1302,7 +1302,7 @@ class: inverse, center, middle
 #### Use the coefficients from the regression to "explain" the predictions.
 
 - Since features are standardized, we can compare the coefficients
-- Largest `\(\beta_i\)` is considered the most important
+- Largest `\(\hat{\beta}_i\)` is considered the most important
 
 ---
 
@@ -1406,7 +1406,7 @@ class: inverse, center, middle
 We first applied lime using all default settings.
 - Explanations did not make sense
 - `\(R^2\)` values were very low
--Predictions from the simple model were poor
+- Predictions from the simple model were poor
     
 .center[&lt;img src="./images/explain1.png" width=450&gt;]
 .center[&lt;font size="4"&gt;Example where the random forest prediction is wrong. The explanations are from 4 quantile bins.&lt;/font&gt;]
@@ -1416,10 +1416,10 @@ We first applied lime using all default settings.
 # More Issues
 
 Then we tried more of the feature distribution estimation methods
-- explanations still not great
+- Explanations still not great
 - `\(R^2\)` values still very low
-- predictions from the simple model still poor
-- explanations dependent on the input
+- Predictions from the simple model still poor
+- Explanations dependent on the input
 
 .center[&lt;img src="./images/explain2.png" width=450&gt;]
 .center[&lt;font size="4"&gt;This is the same case with explanations from 3 equally spaced bins.&lt;/font&gt;]
@@ -1547,6 +1547,7 @@ class: middle, center, inverse
 - Adjust and compare weighting methods and the feature selection methods
 - Allow the number of bins to vary across features
 - Use a tree as the simple model
+- Find other ways to interpret random forest models
 
 ---
 
