--- a/journals/05-applying_lime_to_rtrees/05-applying_lime_to_rtrees.html
+++ b/journals/05-applying_lime_to_rtrees/05-applying_lime_to_rtrees.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Katherine Goode" />
 
-<meta name="date" content="2019-02-22" />
+<meta name="date" content="2019-03-11" />
 
 <title>05-applying_lime_to_rtrees</title>
 
@@ -94,6 +94,9 @@ img {
 }
 .tabbed-pane {
   padding-top: 12px;
+}
+.html-widget {
+  margin-bottom: 20px;
 }
 button.code-folding-btn:focus {
   outline: none;
@@ -219,7 +222,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">05-applying_lime_to_rtrees</h1>
 <h4 class="author"><em>Katherine Goode</em></h4>
-<h4 class="date"><em>February 22, 2019</em></h4>
+<h4 class="date"><em>March 11, 2019</em></h4>
 
 </div>
 
@@ -642,75 +645,69 @@ hamby224_sensitivity_joined &lt;- hamby224_sensitivity_outputs %&gt;%
 <div id="session-info" class="section level1">
 <h1>Session Info</h1>
 <pre class="r"><code>sessionInfo()</code></pre>
-<pre><code>## R version 3.4.4 (2018-03-15)
-## Platform: x86_64-pc-linux-gnu (64-bit)
-## Running under: Ubuntu 16.04.5 LTS
+<pre><code>## R version 3.5.2 (2018-12-20)
+## Platform: x86_64-apple-darwin15.6.0 (64-bit)
+## Running under: macOS Mojave 10.14.3
 ## 
 ## Matrix products: default
-## BLAS: /usr/lib/openblas-base/libblas.so.3
-## LAPACK: /usr/lib/libopenblasp-r0.2.18.so
+## BLAS: /Library/Frameworks/R.framework/Versions/3.5/Resources/lib/libRblas.0.dylib
+## LAPACK: /Library/Frameworks/R.framework/Versions/3.5/Resources/lib/libRlapack.dylib
 ## 
 ## locale:
-##  [1] LC_CTYPE=en_US.UTF-8       LC_NUMERIC=C              
-##  [3] LC_TIME=en_US.UTF-8        LC_COLLATE=en_US.UTF-8    
-##  [5] LC_MONETARY=en_US.UTF-8    LC_MESSAGES=en_US.UTF-8   
-##  [7] LC_PAPER=en_US.UTF-8       LC_NAME=C                 
-##  [9] LC_ADDRESS=C               LC_TELEPHONE=C            
-## [11] LC_MEASUREMENT=en_US.UTF-8 LC_IDENTIFICATION=C       
+## [1] en_US.UTF-8/en_US.UTF-8/en_US.UTF-8/C/en_US.UTF-8/en_US.UTF-8
 ## 
 ## attached base packages:
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-##  [1] assertthat_0.2.0    tree_1.0-39         forcats_0.2.0      
-##  [4] stringr_1.3.1       dplyr_0.8.0.1       purrr_0.3.0        
-##  [7] readr_1.3.1         tidyr_0.8.2         tibble_2.0.1       
-## [10] ggplot2_3.1.0       tidyverse_1.2.1     randomForest_4.6-12
-## [13] furrr_0.1.0         future_1.11.1.1     lime_0.4.1         
+##  [1] assertthat_0.2.0    tree_1.0-39         forcats_0.3.0      
+##  [4] stringr_1.4.0       dplyr_0.7.8         purrr_0.3.0        
+##  [7] readr_1.1.1         tidyr_0.8.2         tibble_2.0.1       
+## [10] ggplot2_3.1.0       tidyverse_1.2.1     randomForest_4.6-14
+## [13] furrr_0.1.0         future_1.10.0       lime_0.4.1         
 ## [16] bulletr_0.1.0.9003 
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] nlme_3.1-137            xts_0.10-1             
-##  [3] lubridate_1.7.1         webshot_0.5.1          
+##  [1] nlme_3.1-137            xts_0.11-0             
+##  [3] lubridate_1.7.4         webshot_0.5.0          
 ##  [5] httr_1.4.0              rprojroot_1.3-2        
-##  [7] tools_3.4.4             backports_1.1.2        
-##  [9] R6_2.4.0                lazyeval_0.2.1         
-## [11] colorspace_1.4-0        manipulateWidget_0.10.0
+##  [7] tools_3.5.2             backports_1.1.3        
+##  [9] R6_2.3.0                lazyeval_0.2.1         
+## [11] colorspace_1.3-2        manipulateWidget_0.10.0
 ## [13] withr_2.1.2             tidyselect_0.2.5       
-## [15] smoother_1.1            mnormt_1.5-5           
-## [17] curl_3.3                compiler_3.4.4         
-## [19] cli_1.0.1               glmnet_2.0-16          
-## [21] rvest_0.3.2             xml2_1.2.0             
-## [23] plotly_4.8.0            scales_1.0.0           
-## [25] DEoptimR_1.0-8          psych_1.7.8            
-## [27] robustbase_0.93-3       digest_0.6.18          
-## [29] foreign_0.8-70          rmarkdown_1.8          
-## [31] pkgconfig_2.0.2         htmltools_0.3.6        
-## [33] htmlwidgets_1.3         rlang_0.3.1            
-## [35] readxl_1.0.0            TTR_0.23-2             
-## [37] rstudioapi_0.7          shiny_1.2.0            
-## [39] zoo_1.8-4               jsonlite_1.6           
-## [41] crosstalk_1.0.0         magrittr_1.5           
-## [43] Matrix_1.2-14           Rcpp_1.0.0             
-## [45] munsell_0.5.0           stringi_1.3.1          
-## [47] yaml_2.2.0              plyr_1.8.4             
-## [49] grid_3.4.4              parallel_3.4.4         
-## [51] listenv_0.7.0           promises_1.0.1         
-## [53] crayon_1.3.4            miniUI_0.1.1.1         
-## [55] lattice_0.20-38         haven_1.1.0            
-## [57] hms_0.4.2               knitr_1.21             
-## [59] pillar_1.3.1            reshape2_1.4.3         
-## [61] codetools_0.2-15        glue_1.3.0             
-## [63] evaluate_0.12           data.table_1.12.0      
-## [65] modelr_0.1.1            httpuv_1.4.5           
-## [67] foreach_1.4.4           cellranger_1.1.0       
-## [69] gtable_0.2.0            xfun_0.4               
-## [71] gower_0.1.2             mime_0.6               
-## [73] xtable_1.8-2            broom_0.4.3            
-## [75] x3ptools_0.0.1.9000     later_0.7.5            
-## [77] viridisLite_0.3.0       shinythemes_1.1.1      
-## [79] iterators_1.0.10        rgl_0.99.16            
-## [81] globals_0.12.4</code></pre>
+## [15] smoother_1.1            curl_3.2               
+## [17] compiler_3.5.2          glmnet_2.0-16          
+## [19] cli_1.0.1               rvest_0.3.2            
+## [21] xml2_1.2.0              plotly_4.8.0.9000      
+## [23] scales_1.0.0            DEoptimR_1.0-8         
+## [25] robustbase_0.93-2       digest_0.6.18          
+## [27] rmarkdown_1.10          pkgconfig_2.0.2        
+## [29] htmltools_0.3.6         htmlwidgets_1.3        
+## [31] rlang_0.3.1             readxl_1.1.0           
+## [33] TTR_0.23-3              rstudioapi_0.7         
+## [35] shiny_1.2.0             bindr_0.1.1            
+## [37] zoo_1.8-3               jsonlite_1.6           
+## [39] crosstalk_1.0.0         magrittr_1.5           
+## [41] Matrix_1.2-15           Rcpp_1.0.0             
+## [43] munsell_0.5.0           stringi_1.3.1          
+## [45] yaml_2.2.0              plyr_1.8.4             
+## [47] grid_3.5.2              parallel_3.5.2         
+## [49] listenv_0.7.0           promises_1.0.1         
+## [51] crayon_1.3.4            miniUI_0.1.1.1         
+## [53] lattice_0.20-38         haven_1.1.2            
+## [55] hms_0.4.2               knitr_1.20             
+## [57] pillar_1.3.1            reshape2_1.4.3         
+## [59] codetools_0.2-15        glue_1.3.0             
+## [61] evaluate_0.11           data.table_1.11.8      
+## [63] modelr_0.1.2            httpuv_1.4.5.1         
+## [65] foreach_1.4.4           cellranger_1.1.0       
+## [67] gtable_0.2.0            gower_0.1.2            
+## [69] mime_0.6                xtable_1.8-3           
+## [71] broom_0.5.0             x3ptools_0.0.1         
+## [73] later_0.7.5             viridisLite_0.3.0      
+## [75] shinythemes_1.1.2       iterators_1.0.10       
+## [77] bindrcpp_0.2.2          rgl_0.99.16            
+## [79] globals_0.12.4</code></pre>
 </div>
 
 
