--- a/journals/02-understanding_lime/02-understanding_lime.html
+++ b/journals/02-understanding_lime/02-understanding_lime.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Katherine Goode" />
 
-<meta name="date" content="2019-08-23" />
+<meta name="date" content="2019-08-27" />
 
 <title>Understanding LIME</title>
 
@@ -1264,66 +1264,6 @@ window.buildTabsets = function(tocID) {
 };
 
 </script>
-<script>
-window.initializeCodeFolding = function(show) {
-
-  // handlers for show-all and hide all
-  $("#rmd-show-all-code").click(function() {
-    $('div.r-code-collapse').each(function() {
-      $(this).collapse('show');
-    });
-  });
-  $("#rmd-hide-all-code").click(function() {
-    $('div.r-code-collapse').each(function() {
-      $(this).collapse('hide');
-    });
-  });
-
-  // index for unique code element ids
-  var currentIndex = 1;
-
-  // select all R code blocks
-  var rCodeBlocks = $('pre.r, pre.python, pre.bash, pre.sql, pre.cpp, pre.stan, pre.julia');
-  rCodeBlocks.each(function() {
-
-    // create a collapsable div to wrap the code in
-    var div = $('<div class="collapse r-code-collapse"></div>');
-    if (show)
-      div.addClass('in');
-    var id = 'rcode-643E0F36' + currentIndex++;
-    div.attr('id', id);
-    $(this).before(div);
-    $(this).detach().appendTo(div);
-
-    // add a show code button right above
-    var showCodeText = $('<span>' + (show ? 'Hide' : 'Code') + '</span>');
-    var showCodeButton = $('<button type="button" class="btn btn-default btn-xs code-folding-btn pull-right"></button>');
-    showCodeButton.append(showCodeText);
-    showCodeButton
-        .attr('data-toggle', 'collapse')
-        .attr('data-target', '#' + id)
-        .attr('aria-expanded', show)
-        .attr('aria-controls', id);
-
-    var buttonRow = $('<div class="row"></div>');
-    var buttonCol = $('<div class="col-md-12"></div>');
-
-    buttonCol.append(showCodeButton);
-    buttonRow.append(buttonCol);
-
-    div.before(buttonRow);
-
-    // update state of button on show/hide
-    div.on('hidden.bs.collapse', function () {
-      showCodeText.text('Code');
-    });
-    div.on('show.bs.collapse', function () {
-      showCodeText.text('Hide');
-    });
-  });
-
-}
-</script>
 <style type="text/css">.hljs-literal {
 color: #990073;
 }
@@ -1491,14 +1431,6 @@ $(document).ready(function () {
 </script>
 
 <!-- code folding -->
-<style type="text/css">
-.code-folding-btn { margin-bottom: 4px; }
-</style>
-<script>
-$(document).ready(function () {
-  window.initializeCodeFolding("hide" === "show");
-});
-</script>
 
 
 
@@ -1609,19 +1541,11 @@ div.tocify {
 
 <div class="fluid-row" id="header">
 
-<div class="btn-group pull-right">
-<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Code</span> <span class="caret"></span></button>
-<ul class="dropdown-menu" style="min-width: 50px;">
-<li><a id="rmd-show-all-code" href="#">Show All Code</a></li>
-<li><a id="rmd-hide-all-code" href="#">Hide All Code</a></li>
-</ul>
-</div>
-
 
 
 <h1 class="title toc-ignore">Understanding LIME</h1>
 <h4 class="author">Katherine Goode</h4>
-<h4 class="date">August 23, 2019</h4>
+<h4 class="date">August 27, 2019</h4>
 
 </div>
 
@@ -2173,32 +2097,32 @@ treebink(y = hamby173and252_train$samesource, x = hamby173and252_train$ccf, k = 
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-##  [1] randomForest_4.6-14 lime_0.5.0          gower_0.2.1        
-##  [4] glmnet_2.0-18       foreach_1.4.4       Matrix_1.2-17      
-##  [7] furrr_0.1.0         future_1.14.0       cowplot_0.9.4      
-## [10] assertthat_0.2.1    tree_1.0-40         forcats_0.4.0      
-## [13] stringr_1.4.0       dplyr_0.8.3         purrr_0.3.2        
-## [16] readr_1.3.1         tidyr_0.8.3         tibble_2.1.3       
-## [19] ggplot2_3.2.1       tidyverse_1.2.1    
+##  [1] assertthat_0.2.1    tree_1.0-40         forcats_0.4.0      
+##  [4] stringr_1.4.0       dplyr_0.8.3         purrr_0.3.2        
+##  [7] readr_1.3.1         tidyr_0.8.3         tibble_2.1.3       
+## [10] tidyverse_1.2.1     randomForest_4.6-14 lime_0.5.0         
+## [13] gower_0.2.1         glmnet_2.0-18       foreach_1.4.7      
+## [16] Matrix_1.2-17       furrr_0.1.0         future_1.14.0      
+## [19] cowplot_0.9.4       ggplot2_3.2.1      
 ## 
 ## loaded via a namespace (and not attached):
 ##  [1] Rcpp_1.0.2        lubridate_1.7.4   lattice_0.20-38  
 ##  [4] listenv_0.7.0     zeallot_0.1.0     digest_0.6.20    
-##  [7] mime_0.7          R6_2.4.0          cellranger_1.1.0 
+##  [7] mime_0.7          cellranger_1.1.0  R6_2.4.0         
 ## [10] backports_1.1.4   evaluate_0.14     httr_1.4.1       
-## [13] pillar_1.4.2      rlang_0.4.0       lazyeval_0.2.2   
-## [16] readxl_1.3.1      rstudioapi_0.10   rmarkdown_1.13   
+## [13] pillar_1.4.2      rlang_0.4.0       readxl_1.3.1     
+## [16] lazyeval_0.2.2    rstudioapi_0.10   rmarkdown_1.13   
 ## [19] labeling_0.3      shinythemes_1.1.2 htmlwidgets_1.3  
 ## [22] munsell_0.5.0     shiny_1.3.2       broom_0.5.2      
 ## [25] compiler_3.6.1    httpuv_1.5.1      modelr_0.1.4     
 ## [28] xfun_0.8          pkgconfig_2.0.2   globals_0.12.4   
 ## [31] htmltools_0.3.6   tidyselect_0.2.5  codetools_0.2-16 
-## [34] later_0.8.0       crayon_1.3.4      withr_2.1.2      
-## [37] grid_3.6.1        xtable_1.8-4      nlme_3.1-140     
-## [40] jsonlite_1.6      gtable_0.3.0      magrittr_1.5     
+## [34] crayon_1.3.4      withr_2.1.2       later_0.8.0      
+## [37] grid_3.6.1        nlme_3.1-140      jsonlite_1.6     
+## [40] xtable_1.8-4      gtable_0.3.0      magrittr_1.5     
 ## [43] scales_1.0.0      cli_1.1.0         stringi_1.4.3    
-## [46] promises_1.0.1    xml2_1.2.2        vctrs_0.2.0      
-## [49] generics_0.0.2    iterators_1.0.10  tools_3.6.1      
+## [46] promises_1.0.1    xml2_1.2.2        generics_0.0.2   
+## [49] vctrs_0.2.0       iterators_1.0.12  tools_3.6.1      
 ## [52] glue_1.3.1        hms_0.5.0         parallel_3.6.1   
 ## [55] yaml_2.2.0        colorspace_1.4-1  rvest_0.3.4      
 ## [58] knitr_1.24        haven_2.1.0</code></pre>
